--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,10 @@
 {% extends 'base/base_page.html' %}
 
 {% block content %}
+{% set background_image_url = url_for('static', filename='images/bg_home.jpg') %}
 <div class="flex flex-col items-center justify-center mb-10 text-center">
 
-    <div class="w-screen h-screen relative bg-cover bg-center" style="background-image: url({{ url_for('static', filename='images/bg_home.jpg') }});">
+    <div class="w-screen h-screen relative bg-cover bg-center" style="background-image: url('{{ background_image_url }}');">
         
         <div class="absolute inset-0 bg-black opacity-50"></div>
 
